gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/passos_numero_sequencia_repetidos.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346689536778" ID="ID_748873123" MODIFIED="1346689542356" TEXT="MM">
<node CREATED="1346689542660" ID="ID_1533877491" MODIFIED="1346689551472" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346689552092" ID="ID_580376842" MODIFIED="1346689571401" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1&#xa;">
<node CREATED="1346689572014" ID="ID_147630938" MODIFIED="1346689582842" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 2">
<node CREATED="1346689583478" ID="ID_820022078" MODIFIED="1346689592154" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 3">
<node CREATED="1346689593214" ID="ID_1390411586" MODIFIED="1346689601203" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 4">
<node CREATED="1347458257587" ID="ID_1880291354" MODIFIED="1347458266791" TEXT="Sequ&#xea;ncia: 5&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 5&#xa;"/>
</node>
<node CREATED="1347458268531" ID="ID_667167131" MODIFIED="1347458283727" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 1 REPETIDO&#xa;"/>
</node>
</node>
<node CREATED="1347458242132" ID="ID_1968529149" MODIFIED="1347458255183" TEXT="Sequ&#xea;ncia: 2a.1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 2a.1&#xa;">
<node CREATED="1347458287203" ID="ID_205588042" MODIFIED="1347458295839" TEXT="Sequ&#xea;ncia: 5&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 5 REPETIDO&#xa;"/>
</node>
</node>
<node CREATED="1347458297499" ID="ID_803897296" MODIFIED="1347458308311" TEXT="Sequ&#xea;ncia: 1a.1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1a.1&#xa;"/>
</node>
</node>
</map>
